# rustbitrage-bot

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
contracts/: OptimizedArbitrage.sol  tx_executor.sol
src/: main.rs
src/modules/: base_fee_updater.rs  blockchain_updater.rs  blocks_updater.rs  config.rs  mempool_watcher.rs  mod.rs  opportunity_finder.rs  pending_tx_processor.rs  pending_tx_watcher.rs  pool_mapper.rs  transaction_executor.rs
src/modules/graph/: edge.rs  graph.rs  node.rs
src/modules/processor/: mod.rs  pending_tx_processor.rs
src/modules/watcher/: blocks_watcher.rs  mempool_watcher.rs  mod.rs  pending_tx_watcher.rs
src/types/: arbitrage_opportunity.rs  mod.rs  opportunity.rs  opportunity_tx.rs  pending_tx_hash.rs  swap_event.rs  uni_v2_pool.rs
src/utils/: call_frame.rs  constants.rs  helpers.rs  interaction.rs  mod.rs  swap.rs  token.rs  transaction.rs  tx_logs.rs
