[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.5"
dotenv = "0.15.0"
env_logger = "0.11.5"
ethers = {version = "2", features = ["ws", "rustls", "abigen","ipc"] }
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rayon = "1.10.0"
futures = "0.3.31"

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
opt-level = 3

[[bin]]
name = "rusty"
path = "src/main.rs"
