[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rayon = "1.10.0"
futures = "0.3.31"
dashmap = "6.1.0"
eyre = "0.6.12"
amms = {git = "https://github.com/m1stoyanov/amms-rs/", branch = "patch-1"}
alloy = {version = "0.4", features = ["provider-ws", "rpc-types-trace", "rpc-types-debug"]}
rand = "0.8.5"
uniswap-v3-sdk = "2.4.0"
anyhow = "1.0.92"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
opt-level = 3
panic = "abort"
strip = "debuginfo"

[[bin]]
name = "rusty"
path = "src/main.rs"
