[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rayon = "1"
futures = "0.3"
dashmap = {version= "6.1.0", features = ["rayon"]}
eyre = "0.6"
amms = {git = "https://github.com/darkforestry/amms-rs.git"}
alloy = {version = "0.5", features = ["provider-ws", "rpc-types-trace", "rpc-types-debug"]}


[profile.release]
lto = "fat"                  # Enables full Link-Time Optimization across the entire program
codegen-units = 1            # Forces single code generation unit for better optimizations
incremental = false          # Disables incremental compilation for clean builds
opt-level = 3             # Sets the highest optimization level for speed
panic = "abort"              # Uses abort-on-panic strategy to reduce binary size and improve performance
strip = "symbols"


[[bin]]
name = "rusty"
path = "src/main.rs"
